# s3k-examples

./: LICENSE  README.md
hello/: README.md  meson.build
hello/subprojects/: .gitignore  s3k.wrap
hello/subprojects/app0/: meson.build
hello/subprojects/app0/platform/qemu_virt/: meson.build  uart.c
hello/subprojects/app0/src/: main.c
hello/subprojects/app0/subprojects/: libaltc
projects/2partitions/: README.md  meson.build  meson.options
projects/2partitions/subprojects/app0/: meson.build
projects/2partitions/subprojects/app0/src/: main.c
projects/2partitions/subprojects/app1/: meson.build
projects/2partitions/subprojects/app1/platform/qemu_virt/: linker.ld  meson.build
projects/2partitions/subprojects/app1/src/: main.c
projects/hello/: README.md  meson.build
projects/hello/subprojects/: libs3k.wrap  libserio.wrap
